force-app/main/default/objects/DiscountCoupons__c/DiscountCoupons__c.object-meta.xml
<CustomObject>
    <label>Discount Coupons</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Discount Coupons Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>