force-app/main/default/objects/DiscountCoupons__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic Coupon for First WO</fullName>
            </value>
            <value>
                <fullName>Generic Coupon for specific time</fullName>
            </value>
            <value>
                <fullName>Specific to a student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>