force-app/main/default/objects/DiscountCoupons__c/fields/DiscountCode__c.field-meta.xml
<CustomField>
    <fullName>DiscountCode__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Code</label>
    <type>Text</type>
</CustomField>