force-app/main/default/objects/DiscountCoupons__c/fields/eTutorSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>eTutorSyncStatus__c</fullName>
    <label>eTutorSyncStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>