force-app/main/default/objects/DiscountCoupons__c/fields/eTutorUserID__c.field-meta.xml
<CustomField>
    <fullName>eTutorUserID__c</fullName>
    <formula>Contact__r.eTutorUserID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eTutorUserID</label>
    <type>Text</type>
</CustomField>