force-app/main/default/objects/DiscountCoupons__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Plagiarism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>