force-app/main/default/objects/DiscountCoupons__c/fields/StudentEmail__c.field-meta.xml
<CustomField>
    <fullName>StudentEmail__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StudentEmail</label>
    <type>Text</type>
</CustomField>