force-app/main/default/objects/DiscountCoupons__c/fields/StudentPhone__c.field-meta.xml
<CustomField>
    <fullName>StudentPhone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StudentPhone</label>
    <type>Text</type>
</CustomField>