force-app/main/default/objects/DiscountCoupons__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DiscountCode__c</columns>
    <columns>Category__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Description__c</columns>
    <columns>Service__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>ExpiryDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>